--- a/src/pages/popup/index.html
+++ b/src/pages/popup/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1000, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Big Tab</title>
   </head>
   <body>
